add login user endpoint
