# apps/auth-service/src/routes/auth.routes.ts
@@ -1,7 +1,12 @@
 import express, { Router } from 'express';
-import { userRegistration, verifyUser } from '../controllers/auth.controller';
+import {
+  loginUser,
+  userRegistration,
+  verifyUser,
+} from '../controllers/auth.controller';
 
 export const authRouter: Router = express.Router();
 
 authRouter.post('/user-registration', userRegistration);
 authRouter.post('/verify-user', verifyUser);
+authRouter.post('/login-user', loginUser);
